# todo-app

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  README.md
.claude/: settings.local.json.tmp.10268.1766989331461
.claude/agents/: auth-security-validator.md  chart-visualizer.md  chatkit-frontend-engineer.md  data-fetcher-subagent.md  data-processor-sub-agent.md  frontend-data-integrator.md  frontend-experience-agent.md  notification-experience-agent.md  phase5-cloud-deployment-engineer.md  task-intelligence-agent.md  task-organization-agent.md  theme-sub-agent.md  ui-builder-subagent.md
.claude/skills/: auth_setup.md  check_dependency_installed.md  database_schema.md  frontend_components.md  task_crud.md
.github/workflows/: deploy-phase5.yml
.specify/memory/: constitution.md  interactive-mode-plan.md  plan.md  task-card-interactive-mode.md  task-card-task-model.md  tasks.md
phase-1/: .gitignore  README.md  demo.py  pyproject.toml
phase-1/specs/1-add-task/: spec.md
phase-1/specs/2-list-tasks/: spec.md
phase-1/specs/3-update-task/: spec.md
phase-1/specs/4-delete-task/: spec.md
phase-1/specs/5-mark-complete-incomplete/: spec.md
phase-1/src/: todo_app.py
phase-1/src/cli/: arg_parser.py
phase-1/src/managers/: task_manager.py
phase-1/src/models/: task.py
phase-1/tests/: test_add_task.py  test_complete_task.py  test_delete_task.py  test_integration.py  test_list_tasks.py  test_task_manager.py  test_task_model.py  test_update_task.py
phase-2/Summaries/: BCRYPT_COMPATIBILITY_FIX.md  DEPLOYMENT-QUICK-REFERENCE.md  DEPLOYMENT_STATUS.md  (+15 more)
phase-2/backend/: .env.example  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
phase-2/backend/src/api/: dependencies.py
phase-2/backend/src/api/v1/: __init__.py  auth.py  history.py  notifications.py  stats.py  tasks.py
phase-2/backend/src/database/: __init__.py  connection.py
phase-2/backend/src/exceptions/: handlers.py
phase-2/backend/src/models/: __init__.py  notification.py  session.py  task.py  task_history.py  user.py
phase-2/backend/src/schemas/: history.py
phase-2/backend/src/services/: auth_service.py  history_service.py  notification_service.py  priority_classifier.py  tag_validator.py  task_service.py
phase-2/backend/src/utils/: jwt.py  timestamps.py  validators.py
phase-2/backend/tests/: conftest.py
phase-2/backend/tests/contract/: test_history.py  test_stats.py  test_tasks_complete.py  test_tasks_create.py  test_tasks_delete.py  test_tasks_list.py  test_tasks_update.py
phase-2/backend/tests/integration/: test_task_workflow.py
phase-2/backend/tests/unit/: test_task_service.py  test_validators.py
phase-3/: CLAUDE.md
phase-4/: NOTIFICATION_DEPLOYMENT_COMPLETE.md  README.md  SERVICES_STATUS.md
phase-5/: .ruff.toml  AZURE-DEPLOYMENT-GUIDE.md  DEPLOYMENT-SUMMARY.md  pyproject.toml
phase-5/services/notification-service/: Dockerfile  pyproject.toml  requirements.txt
phase-5/services/recurring-task-service/: Dockerfile  pyproject.toml  requirements.txt
phase-5/services/recurring-task-service/src/: main.py
phase-5/services/recurring-task-service/src/consumers/: __init__.py  dlq_consumer.py  task_completion_consumer.py
phase-5/services/recurring-task-service/src/services/: __init__.py  deduplication_service.py  rrule_service.py  task_generation_service.py
(+641 files in other folders)
